# ai-agent-platform

./: .cnb.yml  .gitattributes  .gitignore  AGENTS.md  AUDIT_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MEMORY.md  PHASE1-COMPLETION-REPORT.md  README.md  SECURITY.md  TASKS.md  THIRD-PARTY-LICENSES.md  _clientlog.txt  _fulllog.txt  _i2itest.js  _i2itest_backend.js  _p1_body.txt  _p1_done.txt  _p2_body.txt  _p2_done.txt  _p2_http.txt  _push_ci.bat  _tmp_ci_body.json  check-sp.txt  cost-analysis-text2img.md  deploy-from-cnb.sh  deploy-update-v2.sh  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.production.yml  docker-compose.yml  package-lock.json  package.json  vitest.config.ts  webhook-server.py  三维同步与自动部署说明.md
AI-Agent-Observatory/: index.html  scan_agents.py  server.mjs  workbuddy-usage-cache.json
client/: .dockerignore  .eslintrc.cjs  .npmrc  Dockerfile  eslint-client.txt  index.html  lint-client.txt  nginx.conf  nginx.ssl.conf  nginx.ssl.runtime.conf  package-lock.json  package.json  tsc_output.txt  tsconfig.json  vite.config.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: lib.rs  main.rs
deploy/: .env.example  Caddyfile.aibak-site  README.md  _verify_gateway.cjs  _verify_gateway_ctn.cjs  _verify_payment.sh  auto-deploy.sh  backup-database.sh  batch.sh  check_routes.py  check_server.py  cnb-watcher.sh  cron-reconciliation.sh  deploy.sh  docker-compose.build.yml  docker-compose.infra.yml  docker-compose.production.yml  init-server.sh  install-cnb-watcher.sh  nginx-runtime.conf  (+12 more)
(+520 files in other folders)
