[package]
name = "reasonix-desktop"
version = "0.1.0"
description = "Reasonix AI Agent Platform 桌面端（Tauri）"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
